@@ -69,6 +69,8 @@ z80_bit ula_im2_slow={0};
 
 z80_bit pentagon_timing={0};
 
+z80_byte pentagon_port_eff7=0;
+
 
 //Si se pulsan mas de dos teclas en diferentes columnas, en spectrum, se leen mas teclas.
 //El tipico caps+b+v representa caps+b+v+space
